# Mastering-OpenCV-4-Third-Edition

./: .clang-format  .gitignore  README.md
Chapter_01/: CMakeLists.txt  README.md  cartoon.cpp  cartoon.h  fps_timer.hpp  install_opencv_from_source.sh  main.cpp
Chapter_02/: .gitignore  CMakeLists.txt  README.md  main.cpp
Chapter_03/: CMakeLists.txt  README.md  main.cpp
Chapter_04/: CMakeLists.txt  DetectRegions.cpp  DetectRegions.h  OCR.cpp  OCR.h  Plate.cpp  Plate.h  README.md  conanfile.txt  evalOCR.cpp  main.cpp  trainOCR.cpp  trainSVM.cpp
Chapter_04/data/: augment_data.py  code_from_tensor_editor.py
Chapter_04/data/TE_Model/: checkpoint  events.out.tfevents.1537262024.cmle-training-11053896858021507907  freeze_and_optimize.sh  frozen_cut_graph.pb  frozen_cut_graph_opt.pb  graph.pbtxt  model.ckpt-1.data-00000-of-00001  model.ckpt-1.index  model.ckpt-20000.data-00000-of-00001  model.ckpt-20000.index  test.py
Chapter_04/data/TE_Model/eval/: events.out.tfevents.1537262036.cmle-training-11053896858021507907
Chapter_04/data/chars_seg/DNN_data/: test.tfrecords
Chapter_04/utils/: create_tfrecords_from_dir.py
Chapter_05/: CMakeLists.txt  ImageUtils.h  ImageUtils_0.7.cpp  README.md  conanfile.txt  detectObject.cpp  detectObject.h  main.cpp  preprocessFace.cpp  preprocessFace.h  recognition.cpp  recognition.h  resnet_ssd_face.cpp
Chapter_06/: README.md  index.html  main.html  sample_2.html  sample_3.html  sample_4.html  sample_5.html
Chapter_06/css/: custom.css
Chapter_06/js/: common.js
Chapter_07/: README.md  gradle.properties  import-summary.txt  settings.gradle
Chapter_07/app/: CMakeLists.txt  build.gradle
Chapter_07/app/src/main/: AndroidManifest.xml
Chapter_07/app/src/main/cpp/: native-lib.cpp
Chapter_07/app/src/main/java/com/packt/masteringopencv4/opencvarucoar/: CalibrationActivity.java  CameraHandler.java  CameraHelper.java  ImageHelper.java  Main.java  MainActivity.java
Chapter_07/app/src/main/res/layout/: activity_calibration.xml  activity_main.xml
Chapter_07/app/src/main/res/values/: strings.xml
Chapter_08/: .gitignore  Podfile  README.md
Chapter_08/OpenCV Stitcher/: AppDelegate.swift  Info.plist  OpenCV Stitcher-Bridging-Header.h  PanoViewController.swift  PrefixHeader.pch  StitchingWrapper.h  StitchingWrapper.mm  ViewController.swift
Chapter_08/OpenCV Stitcher.xcodeproj/: project.pbxproj
Chapter_08/OpenCV Stitcher.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Chapter_08/OpenCV Stitcher.xcworkspace/: contents.xcworkspacedata
Chapter_08/OpenCV Stitcher/Base.lproj/: Main.storyboard
Chapter_09/: README.md  testing perfomance of 2d features.ipynb
